--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "firebase": "^10.12.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^2.0.5",
     "react-router-dom": "^6.23.1",
     "recoil": "^0.7.7"
   },
