--- a/functions/package.json
+++ b/functions/package.json
@@ -7,7 +7,8 @@
     "shell": "npm run build && firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
-    "logs": "firebase functions:log"
+    "logs": "firebase functions:log",
+    "test": "jest"
   },
   "engines": {
     "node": "18"
@@ -18,8 +19,13 @@
     "firebase-functions": "^5.0.0"
   },
   "devDependencies": {
-    "typescript": "^4.9.0",
-    "firebase-functions-test": "^3.1.0"
+    "@types/jest": "^29.5.12",
+    "firebase-functions-test": "^3.3.0",
+    "jest": "^29.7.0",
+    "jest-mock-req-res": "^1.0.2",
+    "mocha": "^10.7.0",
+    "ts-jest": "^29.2.3",
+    "typescript": "^4.9.0"
   },
   "type": "module"
 }
